--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
   <!-- billboard start  -->
   <section id="billboard" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
     <div class="container ">
-      <div class="row flex-lg-row-reverse align-items-center ">
+      <div class="row m-0 flex-lg-row-reverse align-items-center">
 
         <div class="col-lg-6" data-aos="fade-left" data-aos-duration="500" data-aos-delay="500">
           <img src="images/billboard.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
@@ -302,7 +302,7 @@
           <nav class="navbar navbar-expand-lg billboard-nav">
             <div class="container billboard-search p-0">
 
-              <div class="row billboard-row">
+              <div class="row m-0 billboard-row">
                 <div class="col-lg-3 billboard-select">
                   <select class="form-select mb-2 mb-lg-0" aria-label="Purpose">
                     <option selected>Purpose</option>
@@ -356,7 +356,7 @@
           <h2 class=" text-capitalize m-0">Featured In</h2>
         </div>
       </div>
-      <div class="row d-flex justify-content-between">
+      <div class="row m-0 d-flex justify-content-between">
         <div class="col-md-2 ">
           <div class="my-3" role="group" aria-label="3 / 7" style="width: 158.667px; margin-right: 20px;" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100"><img
               alt="image" src="images/logo1.png"></div>
@@ -552,7 +552,7 @@
   <!--About us start  -->
   <section id="about-us">
     <div class="container">
-      <div class="row py-lg-5">
+      <div class="row m-0 py-lg-5">
 
         <h2 class="text-capitalize text-center m-0 py-lg-5">Why to choose us</h2>
 
@@ -593,7 +593,7 @@
         <div class="swiper-wrapper">
 
           <div class="swiper-slide">
-            <div class="row my-5 py-lg-5">
+            <div class="row m-0 my-5 py-lg-5">
               <div class="col-md-8 mx-auto">
                 <img src="images/quote.png" class="rounded mx-auto d-inline" alt="...">
                 <p class="testimonial-p mt-4">Massa semper non rutrum orci facilisi sit. Lectus porta quam a fringilla
@@ -610,7 +610,7 @@
           </div>
 
           <div class="swiper-slide">
-            <div class="row my-5 py-lg-5">
+            <div class="row m-0 my-5 py-lg-5">
               <div class="col-md-8 mx-auto">
                 <img src="images/quote.png" class="rounded mx-auto d-inline" alt="...">
                 <p class="testimonial-p mt-4">Massa semper non rutrum orci facilisi sit. Lectus porta quam a fringilla
@@ -627,7 +627,7 @@
           </div>
 
           <div class="swiper-slide">
-            <div class="row my-5 py-lg-5">
+            <div class="row m-0 my-5 py-lg-5">
               <div class="col-md-8 mx-auto">
                 <img src="images/quote.png" class="rounded mx-auto d-inline" alt="...">
                 <p class="testimonial-p mt-4">Massa semper non rutrum orci facilisi sit. Lectus porta quam a fringilla
@@ -663,7 +663,7 @@
     style="background: linear-gradient(270deg, #1A242F 0.01%, rgba(26, 36, 47, 0.00) 100%);">
     <div class="container-lg my-5">
 
-      <div class="row d-flex justify-content-between align-items-center">
+      <div class="row m-0 d-flex justify-content-between align-items-center">
 
         <div class="col-md-6" data-aos="fade-right" data-aos-duration="500" data-aos-delay="100">
           <div class="image-holder d-flex">
@@ -689,7 +689,7 @@
   <!-- Lets start  -->
   <section id="start" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
     <div class="container my-5 py-5">
-      <div class="row featurette py-lg-5 ">
+      <div class="row m-0 featurette py-lg-5 ">
         <div class="col-md-5 order-md-1 d-flex">
           <h1 class="text-capitalize  lh-1 mb-3">Let’s simply begin with rentiz.</h1>
         </div>
@@ -709,7 +709,7 @@
   <!-- Footer start  -->
   <section id="footer">
     <div class="container footer-container">
-      <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5  ">
+      <footer class="row m-0 row-cols-1 row-cols-sm-2 row-cols-md-5  ">
 
         <div class=" col-md-4">
           <h3><img src="images/logo.png" alt="image"></h3>
